--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "6.11.0"
   },
   "repository": {
     "type": "git",
