--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.14.0",
+    "file-base64": "^1.0.0",
     "mongodb": "^2.2.30",
     "mongoose": "^4.10.8",
     "socket.io": "^2.0.3"
