--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jsonwebtoken": "^7.4.1",
     "mongodb": "^2.2.30",
     "mongoose": "^4.10.8",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "validator": "^8.0.0"
   },
   "devDependencies": {},
   "scripts": {
