--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "file-base64": "^1.0.0",
     "mongodb": "^2.2.30",
     "mongoose": "^4.10.8",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "validator": "^8.0.0"
   },
   "devDependencies": {},
   "scripts": {
