--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "jsonwebtoken": "^7.4.1",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.3",
+    "nodemailer": "^4.0.1",
     "socket.io": "^2.0.3",
-    "validator": "^8.0.0"
+    "validator": "^8.0.0",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
