--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "crypto-js": "^3.1.9-1",
+    "ejs": "^1.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.7.6",
     "file-base64": "^1.0.0",
     "mongodb": "^2.2.30",
     "mongoose": "^4.10.8",
